--- a/src/main/resources/message_zh.properties
+++ b/src/main/resources/message_zh.properties
@@ -1,5 +1,5 @@
 nav.home=\u9996\u9875
-nav.bukh=BUKH
+nav.bukh=\u5173\u4E8E\u6211\u4EEC
 nav.products=\u4EA7\u54C1
 nav.callesen_diesel=Callesen Diesel
 nav.distributors=\u5206\u9500\u5546
