--- a/src/main/resources/message_zh.properties
+++ b/src/main/resources/message_zh.properties
@@ -4,3 +4,5 @@ nav.products=\u4EA7\u54C1
 nav.callesen_diesel=Callesen Diesel
 nav.distributors=\u5206\u9500\u5546
 nav.contact=\u8054\u7CFB\u6211\u4EEC
+
+user.login= \u767B\u5F55
