--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -6,3 +6,29 @@ nav.distributors=Distributors
 nav.contact=Contact
 
 user.login= Log in
+
+#=======================================================================================================================
+
+contact.tips=Below you can contact us. The following contactform can be used for any unanswered questions you may have.&nbsp; We strive to answer all inquiries within 24 hours.
+
+contact.u.telephone=Telephone
+contact.u.email=E-mail
+contact.u.website=Website
+
+contact.companyName=Company name
+contact.name=Name
+contact.address=Address
+contact.postCode=Postcode
+contact.city=City
+contact.telephone=Telephone
+contact.email=E-mail
+contact.subject=Subject
+contact.findWay=Where did you find us?
+contact.findWay.default= --- Select here ---
+contact.message=Message
+contact.check=Spam check
+contact.check.tips=Enter the 2 words as seen in the image to the right.
+
+contact.send=send
+
+#=======================================================================================================================
