--- a/src/main/resources/message_zh.properties
+++ b/src/main/resources/message_zh.properties
@@ -6,3 +6,29 @@ nav.distributors=\u5206\u9500\u5546
 nav.contact=\u8054\u7CFB\u6211\u4EEC
 
 user.login= \u767B\u5F55
+
+#=======================================================================================================================
+
+contact.tips= \u5982\u679C\u60A8\u6709\u4EFB\u4F55\u95EE\u9898\uFF0C\u60A8\u53EF\u4EE5\u901A\u8FC7\u4E0B\u65B9\u4E0E\u6211\u4EEC\u53D6\u5F97\u8054\u7CFB\u3002\u6211\u4EEC\u4F1A\u52AA\u529B\u572824\u5C0F\u65F6\u5185\u7ED9\u60A8\u7B54\u590D\u3002
+
+contact.u.telephone=\u7535\u8BDD\u53F7\u7801
+contact.u.email=E-mail
+contact.u.website=\u7F51\u5740
+
+contact.companyName=\u516C\u53F8\u540D\u79F0
+contact.name=\u59D3\u540D
+contact.address=\u5730\u5740
+contact.postCode=\u90AE\u653F\u7F16\u7801
+contact.city=\u57CE\u5E02
+contact.telephone=\u7535\u8BDD\u53F7\u7801
+contact.email=E-mail
+contact.subject=\u4E3B\u9898
+contact.findWay=\u60A8\u901A\u8FC7\u4EC0\u4E48\u9014\u5F84\u627E\u5230\u6211\u4EEC?
+contact.findWay.default= --- \u8BF7\u9009\u62E9 ---
+contact.message=\u54A8\u8BE2\u4FE1\u606F
+contact.check=\u9A8C\u8BC1\u7801
+contact.check.tips=\u8BF7\u5728\u53F3\u8FB9\u8F93\u5165\u4F60\u6240\u770B\u5230\u7684\u4E24\u4E2A\u5355\u8BCD.
+
+contact.send=\u53D1\u9001
+
+#=======================================================================================================================
