--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -32,3 +32,6 @@ contact.check.tips=Enter the 2 words as seen in the image to the right.
 contact.send=send
 
 #=======================================================================================================================
+distributors.title=Distributors
+distributors.region=Region
+distributors.country=Country
