--- a/src/main/resources/message_zh.properties
+++ b/src/main/resources/message_zh.properties
@@ -32,3 +32,6 @@ contact.check.tips=\u8BF7\u5728\u53F3\u8FB9\u8F93\u5165\u4F60\u6240\u770B\u5230\
 contact.send=\u53D1\u9001
 
 #=======================================================================================================================
+distributors.title=\u5206\u9500\u5546
+distributors.region=\u533A\u57DF
+distributors.country=\u56FD\u5BB6
